example/envoy-config.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
node:
  cluster: test-cluster
  id: test-id
dynamic_resources:
  lds_config:
    ads: {}
  cds_config:
    ads: {}
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: marin3r
static_resources:
  clusters:
    # The xDS cluster
    - name: marin3r
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      load_assignment:
        cluster_name: marin3r
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: marin3r
                      port_value: 18000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
          common_tls_context:
            # mTLS is necessary for sds
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/tls/envoy-client.crt
                private_key:
                  filename: /etc/envoy/tls/envoy-client.key

    # A test cluster
    - name: service_google
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.google.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
          sni: www.google.com

  listeners:
    - name: web
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
                - name: "*.stg-saas.3sca.net"
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                        envoy_grpc: { cluster_name: marin3r }
        filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              access_log:
                - name: envoy.file_access_log
                  config:
                    path: "/dev/stdout"
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          host_rewrite: www.google.com
                          cluster: service_google
              http_filters:
                - name: envoy.router
